# scans2any

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  demo.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  docker.yaml  release.yaml  windows.yaml
data/: _scans2any  bump-version.py  bump-version.sh  pre-commit  scans2any.1
docs/: contributing.md  filters.md  internals.md  json.md  tutorial.md  writers.md
src/scans2any/: __init__.py  main.py
src/scans2any/filters/: __init__.py  column_filter.py  combine_banner.py  empty_host.py  empty_service.py  hostname_filter.py  hosts_file_filter.py  ip_port.py  nmap_banner.py  service_filter.py  trash_banner.py  trash_hostname.py  trash_service_name.py  use_first_entry.py
src/scans2any/helpers/: cli.py  file_processing.py  infrastructure.py  utils.py
src/scans2any/internal/: __init__.py  clustering.py  config.yaml  database.py  host.py  infrastructure.py  (+5 more)
tests/: conftest.py  generate_tests_and_artifacts.py  generate_tests_and_artifacts_ipv6.sh  test_all_artifacts.py  test_database_autosave.py  test_integration.py
tests/__snapshots__/: test_integration.ambr
tests/artifacts/: aquatone_default.aquatone  aquatone_default.csv  aquatone_default.html  aquatone_default.latex  aquatone_default.markdown  aquatone_default.terminal  aquatone_default.typst  aquatone_multi-table.html  aquatone_multi-table.json  aquatone_multi-table.latex  aquatone_multi-table.markdown  aquatone_multi-table.nmap  aquatone_multi-table.terminal  aquatone_multi-table.typst  aquatone_multi-table.url  aquatone_multi-table.xml  aquatone_multi-table.yaml  bloodhound_default.aquatone  bloodhound_default.host  bloodhound_default.html  bloodhound_default.latex  bloodhound_default.markdown  bloodhound_default.terminal  bloodhound_default.typst  bloodhound_default.xml  bloodhound_default.yaml  bloodhound_multi-table.csv  bloodhound_multi-table.html  bloodhound_multi-table.json  bloodhound_multi-table.latex  bloodhound_multi-table.markdown  bloodhound_multi-table.nmap  bloodhound_multi-table.terminal  bloodhound_multi-table.typst  ipv6_aquatone_default.terminal  ipv6_json_default.terminal  ipv6_masscan_default.terminal  ipv6_nessus_default.terminal  ipv6_nmap_default.terminal  ipv6_nxc_default.terminal  (+107 more)
tests/data/: MERGE_FILE.yaml  README.md
tests/integration_tests/: test_combination.py
tests/performance_tests/: run_all.sh  test_light.sh  test_mini.sh
tests/smoke_tests/: test_smoke.py
tests/unit/: test_models.py
tests/unit_tests/: heal_test_data.py  test_filters.py  test_parsers.py
(+64 files in other folders)
